--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "roboto-fontface": "^0.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
